anna edits to answers to cmments

--- a/abc_comprehensivecba_answerstocomments.tex
+++ b/abc_comprehensivecba_answerstocomments.tex
@@ -33,7 +33,7 @@
 
 \doublespacing
 
-\noindent We thank you all for the thoughtful comments which have led to substantial improvement in the paper. Itemized responses to each of the questions posed follow.
+\noindent We thank you all for the thoughtful comments. They have led to substantial improvement in the paper. Itemized responses to each of the questions are below.
 
 \section{Evan Taylor}
 
@@ -51,21 +51,21 @@
 
 \item In the note for Table 2 you say that $R$ is indicator for treatment and I think you mean $D$, although $R=D$.  $R$ is the randomization indicator, correct?
 
-\noindent \textit{Answer.} You are correct. We have corrected this. The footnote table should define $D$ and not $R$, because that is what is being used in the table. $R$ is randomization and $D$ treatment participation.
+\noindent \textit{Answer.} You are correct. We have corrected this. The table note should define $D$ and not $R$, because that is what is being used in the table. $R$ is randomization and $D$ is treatment participation.
 
 \item In footnote 29, isn't labor income lower for females in the treatment group? Table 2 panel (a) shows a negative coefficient on D.
 
-\noindent \textit{Answer.} Yes. You are correct. Labor income, at age 30, is higher in the control group although the difference is minor. We have corrected this. This has to do with females in the treatment group participating of the labor force later in their lives. After age 30, treatment-group females pick up and ABC/CARE produces substantial gains in terms of their labor income.
+\noindent \textit{Answer.} Yes. You are correct. Labor income, at age 30, is higher in the control group although the difference is minor. We have corrected this. This has to do with females in the treatment group participating in the labor force later in their lives. After age 30, participation for treatment-group females picks up and ABC/CARE produces substantial gains in terms of their labor income.
 
 \item You say that the NPV of lifetime labor income is around $\$600,000$ on page 17 but this does not seem to lineup with Figure 3, maybe I'm missing something.
 
-\noindent \textit{Answer.} You are not missing anything. There was an error on what we were reporting. The NPV for labor income when pooling males and females is: \$133,032 (s.e.\ \$76,634). This is more thoroughly reported and broken into gender in Table C.12 of Appendix C.
+\noindent \textit{Answer.} You are not missing anything. There was an error on what we were reporting. The NPV for labor income when pooling males and females is: \$133,032 (s.e.\ \$76,634). This is more thoroughly reported and broken up by gender in Table C.12 of Appendix C.
 
 \item Figure 3 shows the cost of the program as $\$100,000$, but you say on page 23 that the cost is $\$18,000$. Is the y-axis mislabeled?
 
-\noindent \textit{Answer.} There is not mistake in the y-axis label of Figure 1. Here is the way to interpret the costs reported there: $\$18,000$ is the yearly cost of the program and the program lasted 5 years. In addition, the social cost of the program is also contained in that bar. The footnote of the figure does report that.
+\noindent \textit{Answer.} There is not a mistake in the y-axis label of Figure 1. Here is the way to interpret the costs reported there: $\$18,000$ is the yearly cost of the program and the program lasted 5 years. In addition, the social cost of the program is also contained in that bar. The footnote of the figure reports that.
 
-\item In Section 6, it's a little unclear to me why including health and crime changes the difference between your method and the Kline method so much.  The estimates on lifetime labor income look identical other than the se.  I understand this part because they aren't accounting for model uncertainty but I didn't understand where the difference is the last row are coming from(3.8 vs 7.3).
+\item In Section 6, it's a little unclear to me why including health and crime changes the difference between your method and the Kline method so much.  The estimates on lifetime labor income look identical other than the se.  I understand this part because they aren't accounting for model uncertainty but I didn't understand where the difference is the last row are coming from (3.8 vs 7.3).
 
 \noindent \textit{Answer.} First of all, we are not only including health and crime. We are are also including parental labor income. This is a very sizable gain. Now, the fact that when only labor income is considered the estimates across the two methods are ``identical'' should not be interpreted as a victory for the method of Kline and Walters. Remember: That number is obtained using the return to IQ generated in our own data in terms of labor income. Their ``forecasts'' use labor income \textbf{only up to age 27}. Now, the difference between $3.80$ and $7.33$ is coming from the fact that their back-of-the-envelope return to IQ points in other benefits is too weak to encompass the overall benefits of the program.
 \end{enumerate}
@@ -78,25 +78,26 @@ I think that the paper looks good in general. It provides a template for future 
 
 \item Page 7. The text reads: In the experiment, we analyze participants are observed through age $a^* < \bar{A}$. Should this be $a^* \leq \bar{A}$? If $\bar{A}$ is the oldest age considered, doesn't $\bar{A}$ need to be observed?
 
-\noindent \textit{Answer.} There is no mistake in how the text reads. We observe the experimentals up to age $a^*$, but we want to consider a oldest age $\bar{A}$. A methodology is created to fill the observation gap between $a^*$ and $\bar{A}$.
+\noindent \textit{Answer.} There is no mistake in how the text reads. We observe the experimentals up to age $a^*$, but we want to consider an oldest age $\bar{A}$. A methodology is created to fill the observation gap between $a^*$ and $\bar{A}$.
 
 \item Is Remark R-1 saying that Assumption A-1 can be resolved into two further assumptions.
-\noindent \textit{Answer.} That is exactly right. That is why Assumption A-1 has two two inequalities in both (3a) and (3b). In each (3a) and (3b), the first represents invariance across treatment regimes and the second represents invariance across samples.
+
+\noindent \textit{Answer.} That is exactly right. That is why Assumption A-1 has two inequalities in both (3a) and (3b). In each (3a) and (3b), the first represents invariance across treatment regimes and the second represents invariance across samples.
 
 \item Page 8. Step 1 does not describe the synthetic cohort construction process clearly. I understand that the non-experimental sample is weighted by a similarity weight between non-experimental individuals and the experimental sample, however, the details of this weighting process is unclear. The Mahalanobis algorithm outlined in Appendix C.3.3 constructs a similarity score that is indexed by i and l(i). This implies that each experimental individual i is assigned a weight for each individual l in the non-experimental sample. So, there are i*l weights. It is unclear what happens next. How are the l*i weights used when estimating the production function over the non-experimental sample? Are the scores averaged over all i's for each l, thereby, yielding an average similarity score between each non-exp individual l and the entire experimental sample?
 
-\noindent \textit{Answer.} I believe that this issue cleared up in our conversation. We are following a standard procedure  to ``delimit'' the non-experimental samples as for them to be comparable in baseline characteristics $\bm{B}$ to the experimental sample. The objective is to estimate the production functions of interest in samples that are comparable to the ABC/CARE sample in baseline characteristics, as we discussed. 
+\noindent \textit{Answer.} I believe that this issue cleared up in our conversation. We are following a standard procedure \citep{Heckman_Ichimura_etal_1998_REStud} to ``delimit'' the non-experimental samples as for them to be comparable in baseline characteristics $\bm{B}$ to the experimental sample. The objective is to estimate the production functions of interest in samples that are comparable to the ABC/CARE sample in baseline characteristics, as we discussed. 
 
 \item Page 9. In the explanation of Figure 1, do you mean that the synthetic cohort needs to be comparable to the experimental sample? 
 
-\noindent \textit{Answer.} No. As the text reads, the synthetic cohort needs to be comparable to the non-experimentals for whom $\bm{B} \in \mathcal{B}_0$ and also to the control group. That is because: (i) matching is done based on $bm{B}$ and everyone in the experiment satisfies $\bm{B} \in \mathcal{B}_0$; and (ii) the control group, as the non-experimental sample, received no treatment.
+\noindent \textit{Answer.} No. As the text reads, the synthetic cohort needs to be comparable to the non-experimentals for whom $\bm{B} \in \mathcal{B}_0$ and also to the control group. That is because: (i) matching is done based on $\bm{B}$ and everyone in the experiment satisfies $\bm{B} \in \mathcal{B}_0$; and (ii) the control group, like the non-experimental sample, received no treatment.
 \end{enumerate}
 
 \section{Tanya Rajan}
 
 \begin{enumerate}
 
-\item Page 8. This might be a semantic issue, but can ``synthetic cohort'' and "non-experimental sample" be used interchangeably?
+\item Page 8. This might be a semantic issue, but can ``synthetic cohort'' and ``non-experimental sample" be used interchangeably?
 
 \noindent \textit{Answer.} No. They are not used interchangeably. Non-experimental sample refers to any of the initial non-experimental samples as given (e.g.,\ CNLSY, NLSY79, PSID). Synthetic cohort refers to the non-experimental sample as modified by Step 1 in Section 3.
 
@@ -124,19 +125,25 @@ I think that the paper looks good in general. It provides a template for future 
 
 \noindent \textit{Answer.} The NPV column in Table H.1 should coincide with what Figure 3 presents as NPV for a specific category. We list the NPV in the left-most column for the reader to know the amount that we are removing from the overall NPV. In the crime column, the NPV that we remove is $450,000$. This is the amount that the left-most column shows and the NPV associated to crime in Figure 3. The footnote of the table states that ``The first row represents the baseline estimates. The other rows present estimates for scenarios in which we remove the NPV estimates of the component listed in the first [left-most] column.''
 
-\noindent The pooled NPV estimates in Table H.1 do not match Table C.12 in the appendix or the main estimates in the paper even though all these tables say "baseline" next to the estimates in question.
+\item The pooled NPV estimates in Table H.1 do not match Table C.12 in the appendix or the main estimates in the paper even though all these tables say ``baseline'' next to the estimates in question.
 
 \noindent \textit{Answer.} The estimates do match. In Table C.12 [recall that this table presents NPV for labor income only because that is the exercise at hand], the pooled estimates (Specification 1) report 133,032 (s.e.\ 76,634). In Table H.1 the very same NPV point estimate is reported for subject labor income. This is also consistent with the value reported in Figure 3. 
 
-\item On page 24 you say that this is the "range of plausible values" for for the B/C ratio. Is this a typo? 
+\item On page 24 you say that this is the ``range of plausible values" for for the B/C ratio. Is this a typo? 
 
 \noindent \textit{Answer.}  I am not sure that I was able to read well the question in the document that you sent. But if you compare the ranges that we report with Figure H.1, you will find consistency.
 \end{enumerate}
 
 \section{Rafeh Qureshi}
 
-There aren’t [comments] very many and, apart for the Fix notation, which I and Victor are both a bit confused by, they’re mostly unimportant; you two were quite thorough in reviewing the paper and it’s organized very well. Please, let me know if I can help with this on by reviewing further or checking anything on the data or supplementary literature side. I’ll look a bit more at the appendix as well, but everything seems to be clear and helpfully organized.
+There aren't [comments] very many and, apart for the Fix notation, which I and Victor are both a bit confused by, they're mostly unimportant; you two were quite thorough in reviewing the paper and it's organized very well. Please, let me know if I can help with this on by reviewing further or checking anything on the data or supplementary literature side. I'll look a bit more at the appendix as well, but everything seems to be clear and helpfully organized.
 
-\textit{Answer.} The difference between fixing and conditioning is explained in the references provided in the paper. While conditioning refers to the statistical concept of studying the probability distribution for a subpopulation, fixing refers to the economic concept of a state experienced by an individual. Thus, $Y$ conditional on $V = 0$ refers to the random variable $Y$ for the subpopulation for which $V = 0$. $Y$ fixed on $V = 0$ refers to the random variable $Y$ when the population is fixed to the state $V = 0$. Fixing and conditioning become the same in our context, where $R = D$, and $R$ was randomly assigned.
+\textit{Answer.} The difference between fixing and conditioning is explained in the references provided in the paper \citep{Heckman_Pinto_2015_EconometTheory}. While conditioning refers to the statistical concept of studying the probability distribution for a subpopulation, fixing refers to the economic concept of a state experienced by an individual. Thus, $Y$ conditional on $V = 0$ refers to the random variable $Y$ for the subpopulation for which $V = 0$. $Y$ fixed on $V = 0$ refers to the random variable $Y$ when the population is fixed to the state $V = 0$. Fixing and conditioning become the same in our context, where $R = D$, and $R$ was randomly assigned.
+
+%References
+\singlespace
+\bibliographystyle{chicago}
+\bibliography{heckman}
+
 
 \end{document}
