neil comments added

--- a/abc_comprehensivecba_answerstocomments.tex
+++ b/abc_comprehensivecba_answerstocomments.tex
@@ -138,7 +138,46 @@ I think that the paper looks good in general. It provides a template for future 
 
 There aren't [comments] very many and, apart for the Fix notation, which I and Victor are both a bit confused by, they're mostly unimportant; you two were quite thorough in reviewing the paper and it's organized very well. Please, let me know if I can help with this on by reviewing further or checking anything on the data or supplementary literature side. I'll look a bit more at the appendix as well, but everything seems to be clear and helpfully organized.
 
-\textit{Answer.} The difference between fixing and conditioning is explained in the references provided in the paper \citep{Heckman_Pinto_2015_EconometTheory}. While conditioning refers to the statistical concept of studying the probability distribution for a subpopulation, fixing refers to the economic concept of a state experienced by an individual. Thus, $Y$ conditional on $V = 0$ refers to the random variable $Y$ for the subpopulation for which $V = 0$. $Y$ fixed on $V = 0$ refers to the random variable $Y$ when the population is fixed to the state $V = 0$. Fixing and conditioning become the same in our context, where $R = D$, and $R$ was randomly assigned.
+\textit{Answer.} The difference between fixing and conditioning is explained in the references provided in the paper \citep{Heckman_Pinto_2015_EconometTheory}. While conditioning refers to the statistical concept of studying the probability distribution for a subpopulation, fixing refers to the economic concept of a state experienced by an individual. Thus, $Y$ conditional on $V = 0$ refers to the random variable $Y$ for the subpopulation for which $V = 0$. $Y$ fixed on $V = 0$ refers to the random variable $Y$ when the population is fixed to experience the state $V = 0$. Fixing and conditioning become the same in our context, where $R = D$, and $R$ was randomly assigned.
+
+\section{Neil Cholli}
+
+Neil did not give an overall comment but did say that ``The Online Appendix served as an excellent and comprehensive consulting resource!''
+
+\begin{enumerate}
+
+\item Page 3, par. 3: "We show by example that these procedures..." -- Elaborate on this point? While there's a separate section of the paper dedicated to this point, it might be worth adding an additional line describing why their estimates are misleading and how your method is better.
+
+\noindent \textit{Answer.}
+
+\item Page 12, par. 1: "We report tests for endogeneity of these variables..." -- Since this is important in verifying Assumption A-3 holds, it would be useful to elaborate in 1-2 sentences on how you do this test by using factor analysis of cognitive/non-cognitive skills and including them as additional controls in the regression, instead of leaving it all in the appendix (especially since the test is extremely intuitive). 
+
+\noindent \textit{Answer.}
+
+\item Page 14, Equation (6a): Why does "$B_{e,30}$" include a "30" subscript? My understanding was that the baseline characteristics were irrespective of age. In fact, in all of the previous times B was used, there was no age subscript. 
+
+\noindent \textit{Answer.} Correct; you are right. This was a mistake and it has been fixed.
+
+\item Page 15, Table 2: As described in the bullet point above, $B_{...,30}$ appears a few times in the table and in the footnote.
+
+\noindent \textit{Answer.} Correct, you are right. This was a mistake and it has been fixed.
+
+\item Page 28, Table 5: There is no row containing different discount rates, while Table 4 includes this as a row.
+
+\noindent \textit{Answer.} That is because that we are ``solving'' for the discount rate when we obtain the internal rate of return. 
+
+\item Page 66 (Appendix): Remove "[JLG: Note that in (1) the conditioning actually says A = 1. The printing faints and it looks a $\Lambda = 1$. It is not.]"
+
+\noindent \textit{Answer.} I have left that because, as you saw, in print it is really confusing. Once we finish the paper we will clear it.
+
+\item Pages 85+ (Appendix): I believe you should be referencing Equation (8) instead of (14)?
+
+\noindent \textit{Answer.} That is correct and thank you for pointing it out. The labels got duplicated.
+
+\end{enumerate}
+
+\end{document}
+
 
 %References
 \singlespace
