neil comments added

--- a/abc_comprehensivecba_answerstocomments.tex
+++ b/abc_comprehensivecba_answerstocomments.tex
@@ -148,11 +148,11 @@ Neil did not give an overall comment but did say that ``The Online Appendix serv
 
 \item Page 3, par. 3: "We show by example that these procedures..." -- Elaborate on this point? While there's a separate section of the paper dedicated to this point, it might be worth adding an additional line describing why their estimates are misleading and how your method is better.
 
-\noindent \textit{Answer.}
+\noindent \textit{Answer.} While you are right and in previous version of the paper we were more explicitly about this, the comments of the referee and editor suggest that our previous introduction, and paper overall, was too lengthy. It is in fact hard to explain the comparisons and that is why we relegate all of the information to what is basically a self-contained section that, we assume, some readers will skip. 
 
 \item Page 12, par. 1: "We report tests for endogeneity of these variables..." -- Since this is important in verifying Assumption A-3 holds, it would be useful to elaborate in 1-2 sentences on how you do this test by using factor analysis of cognitive/non-cognitive skills and including them as additional controls in the regression, instead of leaving it all in the appendix (especially since the test is extremely intuitive). 
 
-\noindent \textit{Answer.}
+\noindent \textit{Answer.} Here we have a similar issue as before. Some of the comments we received asked us to put in text what we do, and checks of what we could have done but didn't do or tests that are more ancillary justifications in the appendix. Do note that our footnote for this procedure does explain where the idea of the procedure comes from and how we use our measures to construct control functions. That gives the readers a taste, and we have hope that some consult the appendix to see it. It is gratifying that you find the test intuitive. 
 
 \item Page 14, Equation (6a): Why does "$B_{e,30}$" include a "30" subscript? My understanding was that the baseline characteristics were irrespective of age. In fact, in all of the previous times B was used, there was no age subscript. 
 
