revision after internal comments

--- a/Appendices/Methodology_Alt.tex
+++ b/Appendices/Methodology_Alt.tex
@@ -339,14 +339,14 @@ Assumption~\ref{ass:contain} requires that the support of the auxiliary data con
 
 \noindent This subsection provides a framework for testing Assumption~\ref{ass:exog}. Recall from the main paper that our forecasts are based on the vector of production functions for output $\bm{Y}^d_{k,a}$:
 \begin{equation}
-\bm{Y}^d_{k,a} = \bm{\phi}^d_{k,a} (\bm{X}^d_{k,a}, \bm{B}_k) \ + \ \bm{\varepsilon}^d_{k,a},  \label{eq:outcome2} \\
+\bm{Y}^d_{k,a} = \bm{\phi}^d_{k,a} (\bm{X}^d_{k,a}, \bm{B}_k) \ + \ \bm{\varepsilon}^d_{k,a},  \\
 \end{equation}
 $d \in\{0,1\},  k\in\{e,n\}, a\in\{1,\dots,\bar{A}\}$ where $\bm{\phi}^d_{k,a}\left( \cdot, \cdot \right)$ is a vector of structural production relationships mapping inputs $\bm{X}^d_{k,a}, \bm{B}_k$ into outputs holding error term $\bm{\varepsilon}^d_{k,a}$ fixed.
 
 For notational brevity in the definitions that follow, consider the production function for one entry (one outcome) in this vector (e.g.\ labor income):
 
 \begin{equation}
-Y^d_{k,a} =\phi^d_{k,a} (\bm{X}^d_{k,a}, \bm{B}_k) \ + \ \varepsilon^d_{k,a},  \label{eq:outcomesin} \\
+Y^d_{k,a} =\phi^d_{k,a} (\bm{X}^d_{k,a}, \bm{B}_k) \ + \ \varepsilon^d_{k,a},  \\
 \end{equation}
 
 \noindent where the variables are defined analogously to Equation~\eqref{eq:outcome2}. Note that the arguments of $\phi^d_{k,a}$ are still vectors in this case. We abuse notation to make unbolded variables generic scalars. Define an associated measurement system for the error term $\varepsilon^d_{k,a}$:
