--- a/abc_comprehensivecba_answerstocomments.tex
+++ b/abc_comprehensivecba_answerstocomments.tex
@@ -24,7 +24,7 @@
 \begin{titlepage}
 \newgeometry{top=.8in, bottom=.8in, left=.8in, right=.8in}
 
-\title{\Large \textbf{Responses to Comments}}
+\title{\Large \textbf{Responses to Internal Comments}}
 
 \maketitle
 \thispagestyle{empty}
@@ -35,7 +35,7 @@
 
 \noindent We thank you all for the thoughtful comments. They have led to substantial improvement in the paper. Itemized responses to each of the questions are below.
 
-\section{Evan Taylor}
+\section*{Evan Taylor}
 
 \noindent Overall, this is a cool paper and I thought it was very clear. Couple of fairly minor comments. 
 
@@ -70,7 +70,7 @@
 \noindent \textit{Answer.} First of all, we are not only including health and crime. We are are also including parental labor income. This is a very sizable gain. Now, the fact that when only labor income is considered the estimates across the two methods are ``identical'' should not be interpreted as a victory for the method of Kline and Walters. Remember: That number is obtained using the return to IQ generated in our own data in terms of labor income. Their ``forecasts'' use labor income \textbf{only up to age 27}. Now, the difference between $3.80$ and $7.33$ is coming from the fact that their back-of-the-envelope return to IQ points in other benefits is too weak to encompass the overall benefits of the program.
 \end{enumerate}
 
-\section{Sidharth Moktan}
+\section*{Sidharth Moktan}
 
 I think that the paper looks good in general. It provides a template for future cost-benefit analyses, including the Perry, in my opinion. In general, I'd be able to replicate most parts of the analysis. However, I was very confused about the weighting procedure in the parametric approach. If you asked me to replicate, this would be my stumbling point. Our phone conversation cleared things up. One of my comments in the paper describes how the Appendix did not help answer this question. 
 
@@ -93,7 +93,7 @@ I think that the paper looks good in general. It provides a template for future 
 \noindent \textit{Answer.} No. As the text reads, the synthetic cohort needs to be comparable to the non-experimentals for whom $\bm{B} \in \mathcal{B}_0$ and also to the control group. That is because: (i) matching is done based on $\bm{B}$ and everyone in the experiment satisfies $\bm{B} \in \mathcal{B}_0$; and (ii) the control group, like the non-experimental sample, received no treatment.
 \end{enumerate}
 
-\section{Tanya Rajan}
+\section*{Tanya Rajan}
 
 \begin{enumerate}
 
@@ -134,13 +134,13 @@ I think that the paper looks good in general. It provides a template for future 
 \noindent \textit{Answer.}  I am not sure that I was able to read well the question in the document that you sent. But if you compare the ranges that we report with Figure H.1, you will find consistency.
 \end{enumerate}
 
-\section{Rafeh Qureshi}
+\section*{Rafeh Qureshi}
 
 There aren't [comments] very many and, apart for the Fix notation, which I and Victor are both a bit confused by, they're mostly unimportant; you two were quite thorough in reviewing the paper and it's organized very well. Please, let me know if I can help with this on by reviewing further or checking anything on the data or supplementary literature side. I'll look a bit more at the appendix as well, but everything seems to be clear and helpfully organized.
 
-\textit{Answer.} The difference between fixing and conditioning is explained in the references provided in the paper \citep{Heckman_Pinto_2015_EconometTheory}. While conditioning refers to the statistical concept of studying the probability distribution for a subpopulation, fixing refers to the economic concept of a state experienced by an individual. Thus, $Y$ conditional on $V = 0$ refers to the random variable $Y$ for the subpopulation for which $V = 0$. $Y$ fixed on $V = 0$ refers to the random variable $Y$ when the population is fixed to experience the state $V = 0$. Fixing and conditioning become the same in our context, where $R = D$, and $R$ was randomly assigned.
+\textit{Answer.} The difference between fixing and conditioning is explained in the references provided in the paper \citep{Heckman_Pinto_2015_EconometTheory}. While conditioning refers to the statistical concept of studying the probability distribution for a subpopulation, fixing refers to the economic concept of a state experienced by an individual. Thus, $Y$ conditional on $V = 0$ refers to the random variable $Y$ for the subpopulation for which $V = 0$. $Y$ fixed on $V = 0$ refers to the random variable $Y$ when the population is fixed to experience the state $V = 0$.
 
-\section{Neil Cholli}
+\section*{Neil Cholli}
 
 Neil did not give an overall comment but did say that ``The Online Appendix served as an excellent and comprehensive consulting resource!''
 
@@ -175,9 +175,6 @@ Neil did not give an overall comment but did say that ``The Online Appendix serv
 \noindent \textit{Answer.} That is correct and thank you for pointing it out. The labels got duplicated.
 
 \end{enumerate}
-
-\end{document}
-
 
 %References
 \singlespace
