anna changes to paper and answer to comments

--- a/abc_comprehensivecba_answerstocomments.tex
+++ b/abc_comprehensivecba_answerstocomments.tex
@@ -63,7 +63,7 @@
 
 \item Figure 3 shows the cost of the program as $\$100,000$, but you say on page 23 that the cost is $\$18,000$. Is the y-axis mislabeled?
 
-\noindent \textit{Answer.} There is not a mistake in the y-axis label of Figure 1. Here is the way to interpret the costs reported there: $\$18,000$ is the yearly cost of the program and the program lasted 5 years. In addition, the social cost of the program is also contained in that bar. The footnote of the figure reports that.
+\noindent \textit{Answer.} There is not a mistake in the y-axis label of Figure 3. Here is the way to interpret the costs reported there: $\$18,000$ is the yearly cost of the program and the program lasted 5 years. In addition, the social cost of the program is also contained in that bar. The footnote of the figure reports that.
 
 \item In Section 6, it's a little unclear to me why including health and crime changes the difference between your method and the Kline method so much.  The estimates on lifetime labor income look identical other than the se.  I understand this part because they aren't accounting for model uncertainty but I didn't understand where the difference is the last row are coming from (3.8 vs 7.3).
 
@@ -129,9 +129,9 @@ I think that the paper looks good in general. It provides a template for future 
 
 \noindent \textit{Answer.} The estimates do match. In Table C.12 [recall that this table presents NPV for labor income only because that is the exercise at hand], the pooled estimates (Specification 1) report 133,032 (s.e.\ 76,634). In Table H.1 the very same NPV point estimate is reported for subject labor income. This is also consistent with the value reported in Figure 3. 
 
-\item On page 24 you say that this is the ``range of plausible values" for for the B/C ratio. Is this a typo? 
+\item On page 33 the range of plausible values of the IRR does not match that on page 24. Is this a typo?
 
-\noindent \textit{Answer.}  I am not sure that I was able to read well the question in the document that you sent. But if you compare the ranges that we report with Figure H.1, you will find consistency.
+\noindent \textit{Answer.}  Yes, this was a typo and it has been corrected.
 \end{enumerate}
 
 \section*{Rafeh Qureshi}
