--- a/abc_comprehensivecba_revised.tex
+++ b/abc_comprehensivecba_revised.tex
@@ -29,7 +29,7 @@
 \newgeometry{top=.8in, bottom=.8in, left=.8in, right=.8in}
 
 
-\title{\Large \textbf{Quantifying the Life-cycle \\ Benefits of an Influential Early Childhood Program}\thanks{This research was supported in part by grants from the Robert Wood Johnson Foundation's Policies for Action program, NICHD R37HD065072, the American Bar Foundation, the Buffett Early Childhood Fund, the Pritzker Children's Initiative, NICHD R01HD054702, NIA R01AG042390, and by the National Institute On Aging of the National Institutes of Health under Award Number P30AG024968. The views expressed in this paper are solely those of the authors and do not necessarily represent those of the funders or the official views of the National Institutes of Health. The authors wish to thank Frances Campbell, Craig and Sharon Ramey, Margaret Burchinal, Carrie Bynum, and the staff of the Frank Porter Graham Child Development Institute at the University of North Carolina Chapel Hill for the use of data and source materials from the Carolina Abecedarian Project and the Carolina Approach to Responsive Education. Years of partnership and collaboration have made this work possible. Andr\'{e}s Hojman, Yu Kyung Koh, Sylvi Kuperman, Stefano Mosso, Rodrigo Pinto, Joshua Shea, Jake Torcasso, and Anna Ziff contributed to the analysis in this paper. We thank Bryan Tysinger of the Leonard D. Schaeffer Center for Health Policy and Economics at the University of Southern California for help adapting the Future Adult Model to make the health projections used in this paper. For helpful comments on various versions of the paper, we thank the editor, Harald Uhlig, two anonymous referees, St\'{e}phane Bonhomme, Fl\'{a}vio Cunha, Steven Durlauf, David Figlio, Dana Goldman, Ganesh Karapakula, Magne Mogstad, Sidharth Moktan, Tanya Rajan, Azeem Shaikh, Jeffrey Smith, Chris Taber, Matthew Tauzer, Ed Vytlacil, Jim Walker, Chris Walters, and Matt Wiswall. We benefited from helpful comments received at the Leonard D. Schaeffer Center for Health Policy and Economics in December, 2016, and at the University of Wisconsin, February, 2017. We thank Peg Burchinal, Carrie Bynum, Frances Campbell, and Elizabeth Gunn for information on the implementation of the Carolina Abecedarian Project and the Carolina Approach to Responsive Education and assistance in data acquisition. For information on childcare in North Carolina, we thank Richard Clifford and Sue Russell. The set of codes to replicate the computations in this paper are posted in a repository. Interested parties can request to download all the files. The address of the repository is \url{https://github.com/jorgelgarcia/abccare-cba}. To replicate the results in this paper, contact the first author, who will put you in contact with the appropriate individuals to obtain access to restricted data. The Appendix for this paper is posted on \url{http://cehd.uchicago.edu/ABC_CARE}.}}
+\title{\Large \textbf{Quantifying the Life-cycle \\ Benefits of an Influential Early Childhood Program}\thanks{This research was supported in part by grants from the Robert Wood Johnson Foundation's Policies for Action program, NICHD R37HD065072, the American Bar Foundation, the Buffett Early Childhood Fund, the Pritzker Children's Initiative, NICHD R01HD054702, NIA R01AG042390, and by the National Institute On Aging of the National Institutes of Health under Award Number P30AG024968. The views expressed in this paper are solely those of the authors and do not necessarily represent those of the funders or the official views of the National Institutes of Health. The authors wish to thank Frances Campbell, Craig and Sharon Ramey, Margaret Burchinal, Carrie Bynum, and the staff of the Frank Porter Graham Child Development Institute at the University of North Carolina Chapel Hill for the use of data and source materials from the Carolina Abecedarian Project and the Carolina Approach to Responsive Education. Years of partnership and collaboration have made this work possible. Andr\'{e}s Hojman, Yu Kyung Koh, Sylvi Kuperman, Stefano Mosso, Rodrigo Pinto, Joshua Shea, Jake Torcasso, and Anna Ziff contributed to the analysis in this paper. We thank Bryan Tysinger of the Leonard D. Schaeffer Center for Health Policy and Economics at the University of Southern California for help adapting the Future Adult Model to make the health projections used in this paper. For helpful comments on various versions of the paper, we thank the editor, Harald Uhlig, two anonymous referees, St\'{e}phane Bonhomme, Neal Cholli, Fl\'{a}vio Cunha, Steven Durlauf, David Figlio, Dana Goldman, Ganesh Karapakula, Magne Mogstad, Sidharth Moktan, Tanya Rajan, Azeem Shaikh, Jeffrey Smith, Chris Taber, Matthew Tauzer, Evan Taylor, Ed Vytlacil, Jim Walker, Chris Walters, and Matt Wiswall. We benefited from helpful comments received at the Leonard D. Schaeffer Center for Health Policy and Economics in December, 2016, and at the University of Wisconsin, February, 2017. We thank Peg Burchinal, Carrie Bynum, Frances Campbell, and Elizabeth Gunn for information on the implementation of the Carolina Abecedarian Project and the Carolina Approach to Responsive Education and assistance in data acquisition. For information on childcare in North Carolina, we thank Richard Clifford and Sue Russell. The set of codes to replicate the computations in this paper are posted in a repository. Interested parties can request to download all the files. The address of the repository is \url{https://github.com/jorgelgarcia/abccare-cba}. To replicate the results in this paper, contact the first author, who will put you in contact with the appropriate individuals to obtain access to restricted data. The Appendix for this paper is posted on \url{http://cehd.uchicago.edu/ABC_CARE}.}}
 
 \author{
 Jorge Luis Garc\'{i}a\\
@@ -113,7 +113,7 @@ We construct synthetic cohorts from non-experimental samples. The cohorts are ch
 
 Our analysis is a template for estimating the life-cycle gains of social experiments for which there is less than full lifetime follow-up. Supplementing experimental data with non-experimental data enhances the information available from social experiments. Using economic theory and econometric methods to generate empirically concordant forecasts enhances the credibility of the procedure.
 
-The quest for long-run estimates from experiments with short-term follow-up has recently led to application of informal procedures for estimating long-term benefits using short-term measures of childhood test scores \citep[e.g.][]{Chetty_Friedman_etal_2011_QJoE,Kline_Walters_2016_QJE}. We show by example that these procedures can give very misleading estimates of true life cycle program benefits.
+The quest for long-run estimates from experiments with short-term follow-up has recently led to application of informal procedures for estimating long-term benefits using short-term measures of childhood test scores \citep[e.g.][]{Chetty_Friedman_etal_2011_QJoE,Kline_Walters_2016_QJE}. We show by example that these procedures can give very misleading estimates of true life cycle program benefits by focusing on earnings, not counting the full array of benefits generated, and relying solely on test scores to predict earnings.
 
 This paper proceeds in the following way. Section~\ref{section:background} describes the ABC/CARE program. Section~\ref{section:cbamethodology} discusses our methodology for forecasting life-cycle outcomes and the evidence supporting our assumptions. To make matters concrete, we consider in detail how we forecast life cycle labor income. Section~\ref{section:cbapractice} discusses how we forecast other life-cycle outcomes. Section~\ref{section:cbaresults} reports baseline estimates of internal rates of return and benefit/cost ratios and reports an array of sensitivity analyses. Section~\ref{section:bcaestimates} uses our estimates to examine the predictive validity of widely used informal forecasting methods. Section~\ref{section:conclusion} summarizes our findings.
 
@@ -153,7 +153,7 @@ Randomization identifies this parameter in the experimental sample.
 \begin{equation}
 \bm{Y}^d_{k,a} = \bm{\phi}^d_{k,a} (\bm{X}^d_{k,a}, \bm{B}_k) \ + \ \bm{\varepsilon}^d_{k,a},  \label{eq:outcome} \\
 \end{equation}
-$d \in\{0,1\},  k\in\{e,n\}, a\in\{1,\dots,\bar{A}\}$ where $\bm{\phi}^d_{k,a}\left( \cdot, \cdot \right)$ is a vector of structural production relationships mapping inputs $\bm{X}^d_{k,a}, \bm{B}_k$ into outputs holding the error term $\bm{\varepsilon}^d_{k,a}$ fixed.\footnote{Fixing and conditioning are fundamentally different concepts. See \cite{Haavelmo_1943_Econometrica} and \citet{Heckman_Pinto_2015_EconometReviews} for discussions.} $ \bm{B}_k$ are baseline variables not affected by treatment. $\bm{X}^d_{k,a}$ are variables potentially affected by treatment. $\bar{A}$ is the oldest age considered in our analysis. In the experiment we analyze, participants are observed through age $a^*< \bar{A}$.
+$d \in\{0,1\},  k\in\{e,n\}, a\in\{1,\dots,\bar{A}\}$ where $\bm{\phi}^d_{k,a}\left( \cdot, \cdot \right)$ is a vector of structural production relationships mapping inputs $\bm{X}^d_{k,a}, \bm{B}_k$ into outputs holding the error term $\bm{\varepsilon}^d_{k,a}$ fixed.\footnote{Fixing and conditioning are fundamentally different concepts. See \cite{Haavelmo_1943_Econometrica} and \citet{Heckman_Pinto_2015_EconometReviews} for discussions. The ``do'' operator in \citet{Pearl_2009_BOOKcausality} is an example of fixing.} $ \bm{B}_k$ are baseline variables not affected by treatment. $\bm{X}^d_{k,a}$ are variables potentially affected by treatment. $\bar{A}$ is the oldest age through which benefits are projected. In the experiment we analyze, participants are observed through age $a^*< \bar{A}$.
 
 The relationship between the inputs $\bm{X}^d_{k,a}, \bm{B}_k$ and outputs $\bm{Y}^d_{k,a}$ can, in principle, differ between experimental and non-experimental samples although in our data this is not the case. Equation~\eqref{eq:outcome} characterizes the outcomes of the two treatment regimes in any sample, including a non-experimental sample with no direct empirical counterpart for the case $d = 1$. We present conditions for identifying and estimating $\bm{\phi}^d_{k,a}\left( \cdot, \cdot \right)$ in non-experimental samples. A crucial condition is that for fixed values of inputs $\bm{X}^d_{k,a} = \bm{x}, \bm{B}_k = \bm{b}$ there are no differences in the technologies and in the distributions of $\bm{\varepsilon}_{k,a}^d$ across treatment regimes and samples. We first formalize this assumption and then remark on its content.
 
@@ -203,13 +203,13 @@ To make the discussion specific, we now consider how one can use this framework 
 
 \subsection{Forecasting Labor Income} \label{sec:forecasting}
 
-\noindent \textbf{Step 1.\ Constructing a Synthetic Cohort.} We use the Children of the National Longitudinal Survey of Youth (CNLSY) to construct a synthetic cohort from ages 21 to 29. We use both the National Longitudinal Survey of Youth 1979 (NLSY79) and the Panel Study of Income Dynamics (PSID) to construct a synthetic cohort from ages 29 to 67. Whenever we use the NLSY79 and PSID together, we combine samples. Thus we use three non-experimental datasets to obtain information across the life cycle. We satisfy support conditions.\footnote{See Appendix~\ref{app:containsupport}.}
+\noindent \textbf{Step 1.\ Constructing a Synthetic Cohort.} We use the Children of the National Longitudinal Survey of Youth (CNLSY) to construct a synthetic cohort from ages 21 to 29 based on similarity with the baseline variables in the experimental samples ($\bm{B}$). We use both the National Longitudinal Survey of Youth 1979 (NLSY79) and the Panel Study of Income Dynamics (PSID) to construct a synthetic cohort from ages 29 to 67. Whenever we use the NLSY79 and PSID together, we combine samples. Thus we use three non-experimental datasets to obtain information across the life cycle. We satisfy support conditions.\footnote{See Appendix~\ref{app:containsupport}.}
 
 Because we do not observe each element of the eligibility index discussed in Section~\ref{section:background}, we approximate $\bm{B}_{n} \in \mathcal{B}_0$. We delimit the sample to include observations satisfying the following criteria: (i) \textbf{NLSY79:} Black, labor income less than \$300,000 (2014 USD) in any given year, birth year between 1957 and 1965; (ii) \textbf{PSID:} Black, labor income less than \$300,000 (2014 USD), birth year between 1945 and 1981; and (iii) \textbf{CNLSY:} Black, labor income less than \$300,000 (2014 USD) in any given year, birth year between 1978 and 1983.
 
-We weight each individual in the non-experimental samples according to his/her resemblance to the individuals in the experimental sample.\footnote{We use Mahalanobis' matching Algorithm~\ref{alg:match} (see Appendix~\ref{appendix:methodology}).} Baseline pre-treatment match variables are: year of birth, gender, and number of siblings at baseline. All are available in the non-experimental datasets. This procedure generates a synthetic cohort in the non-experimental sample for subsequent analysis in our structural forecasting procedure.
+We weight individuals in the non-experimental samples according to their resemblance to individuals in the experimental sample.\footnote{We use Mahalanobis' matching Algorithm~\ref{alg:match} and weights derived from the Mahalanobis distances (downsizing dissimilar observations). See Appendix~\ref{appendix:methodology} for details.} We match on baseline pre-treatment match variables: year of birth, gender, and number of siblings at baseline. All are available in the non-experimental datasets. This procedure generates a synthetic cohort in the non-experimental sample for subsequent analysis in our structural forecasting procedure.
 
-By design, there is no treatment effect in the non-experimental sample. Matching to the experimental sample is executed using baseline variables not affected by treatment in the experimental sample. Figure~\ref{figure:controltests} demonstrates that the synthetic cohort is comparable to the non-experimental sample for which $\bm{B}_{n} \in \mathcal{B}_0$. At age 30, average observed labor income for the control group in the experimental sample coincides with average labor income for the synthetic cohort.\footnote{We observe labor income in the experimental samples at ages 21 and 30. We use the data at age 21 to initialize our forecasting model and hence cannot use it for testing our forecast.}
+By design, there is no treatment effect in the non-experimental sample. Matching to the experimental sample is executed using baseline variables not affected by treatment in the experimental sample. Figure~\ref{figure:controltests} demonstrates that the synthetic cohort is comparable to the control group of the experiment. At age 30, average observed labor income for the control group in the experimental sample coincides with average labor income for the synthetic cohort.\footnote{We observe labor income in the experimental samples at ages 21 and 30. We use the data at age 21 to initialize our forecasting model and hence cannot use it for testing our forecast.}
 
 \begin{sidewaysfigure}[!htbp]
 \centering
@@ -243,7 +243,7 @@ Below we discuss how this condition can be weakened and unbiased forecasts can s
 
 To appreciate the benefit of Assumption~\ref{ass:exog}, consider the following example. Suppose that years of education is a component of $\bm{X}^{d'}_{k,{a'}}$. The joint distribution of $\bm{\varepsilon}_{k,a}^d$ and $\bm{X}^{d'}_{k,{a'}}$ can differ substantially across experimental and non-experimental samples. In the experimental sample, years of education are boosted by treatment, which is randomly assigned. In the non-experimental samples, however, there is no experimental variation. Individuals with high observed levels of education could have high values of $\bm{\varepsilon}_{k,a}^d$ due to omitted ability. This creates a fundamentally different dependence between $\bm{\varepsilon}_{k,a}^d$ and $\bm{X}_{k,{a'}}^{d'}$ in the non-experimental sample. Assumption~\ref{ass:exog} avoids this problem when making forecasts. Below, we establish that our forecasts based on this assumption are concordant with forecasts from approaches that do not necessarily require Assumption~\ref{ass:exog}.
 
-\textbf{Step 3. Determining Inputs.} Analysis of the non-experimental data reveals that the inputs determining labor income under Assumption~\ref{ass:exog} are: average PIAT achievement score from ages 5 to 7, completed education, labor income at age 21, and lagged labor income. Appendix Table~\ref{table:predlaborincome} shows that these variables predict labor income. Appendix~\ref{app:containsupport} shows that there is common support across datasets. We report tests for endogeneity of these variables in the experimental and auxiliary samples used in this paper in Appendix~\ref{app:endogeneity}.\footnote{These tests assume that $\bm{\varepsilon}_{k,a}^d, k \in \{e,n\}$, follows a factor structure. Factor structure models are widely used in structural estimation of production functions of skills during early childhood. See, e.g., \citet{Cunha_Heckman_2008_JHR} and \citet{Cunha_Heckman_etal_2010_est_tech_cognoncog}.} After conditioning on $\bm{X}_{k,a}^d$ and $\bm{B}_{k}$, we do not reject the null hypothesis of exogeneity. Accordingly, we use OLS for making our baseline estimates.
+\textbf{Step 3. Determining Inputs.} Analysis of the non-experimental data reveals that the inputs determining labor income under Assumption~\ref{ass:exog} are: average PIAT achievement score from ages 5 to 7, completed education, labor income at age 21, and lagged labor income. Appendix Table~\ref{table:predlaborincome} shows that these variables predict labor income. Appendix~\ref{app:containsupport} shows that there is common support across datasets. We report tests for endogeneity of these variables in the experimental and auxiliary samples used in this paper in Appendix~\ref{app:endogeneity}.\footnote{These tests are based on the assumption that $\bm{\varepsilon}_{k,a}^d, k \in \{e,n\}$, follow a factor structure. Factors are predicted by measurements on cognitive and non-cognitive skills controlling for the factor using a variety of methods. We do not reject the null of exogeneity. See Appendix~\ref{app:endogeneity}. Factor structure models are widely used in structural estimation of production functions of skills during early childhood. See, e.g., \citet{Cunha_Heckman_2008_JHR} and \citet{Cunha_Heckman_etal_2010_est_tech_cognoncog}. Our test follows that in \citet{Heckman_Pinto_etal_2013_PerryFactor}.} After conditioning on $\bm{X}_{k,a}^d$ and $\bm{B}_{k}$, we do not reject the null hypothesis of exogeneity. Accordingly, we use OLS for making our baseline estimates.
 
 Table~\ref{table:summint} displays the treatment effects of the program for these inputs.\footnote{We first present raw treatment-control mean differences. As we report in Table~\ref{table:summint}, the treatment effects are substantial across multiple outcomes. In some cases, this finding is at odds with what other studies report \citep{Ramey_etal_1985_Project-CARE_TiECSE,Clarke_Campbell_1998_ABC_Comparison_ECRQ,Campbell_Pungello_etal_2001_DP,Campbell_Ramey_etal_2002_ADS,Campbell_Wasik_etal_2008_ECRQ,Campbell_Conti_etal_2014_EarlyChildhoodInvestments}. The difference is explained, mainly, by the fact that we consider effects by gender.  Only \citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} consider treatment effects by gender. They focus on health effects and find that men have many more positive effects especially in cardiovascular and metabolic conditions if compared to women. This is consistent with the results we report below.} Assignment to treatment has statistically and economically significant causal effects on the inputs generating final outcome treatment effects. Our forecasted treatment effects are based on these program-induced changes in inputs. For females, it increases the average PIAT score by almost one third of a standard deviation.\footnote{The test is standardized to an in-sample standard deviation of 15 units.} For males, the effect is almost half of a standard deviation. The program substantially boosts high school graduation for females and college graduation for both males and females. We use years of education attained to summarize both effects in a measure that is comparable across genders. Labor income at age 21 for girls is not greatly boosted by the program. This arises in part because treated girls are more likely to be enrolled in college at age 21 and thus do not work at that age. The program boosts annual labor income, especially for males, for whom the average treatment effect at age 30 is almost 20,000 (2014 USD).\footnote{Table~\ref{table:summint} displays age-21 and age-30 labor income because labor income is observed at ages 21 and 30 in the experimental sample. Labor income at age 30 is an input in our methodology only after age 30.}
 
@@ -419,9 +419,9 @@ Note: Panel (a) displays the forecast life-cycle labor income profiles for ABC/C
 
 \noindent An alternative non-parametric forecasting method compresses the whole forecasting procedure. Under Assumptions~\ref{ass:summary} and~\ref{ass:exog}, we can use matching on baseline variables and \emph{variables affected by treatment} to construct counterparts to the experimental treatment and control groups in the non-experimental sample.\footnote{\citet{Heckman_Ichimura_etal_1998_Econometrica} discuss this procedure.} Matching is a non-parametric estimation procedure for conditional mean functions. Matching creates direct counterparts in the auxiliary sample for \textit{each member} of the experimental sample. Instead of estimating a model for the life-cycle profile of labor income and forecasting from it, we directly use the counterpart matched profiles.\footnote{See Appendix~\ref{appendix:nonpar} for details.} This is an intuitively appealing non-parametric estimator of life-cycle program treatment effects that is valid under exogeneity \citep{Heckman_Navarro_2004_REStat}.
 
-This is a fundamentally different matching procedure than what is used to construct the synthetic cohort in \textbf{Step 1}. In the main analysis of this paper, we match on baseline variables not affected by treatment to construct a synthetic cohort with $\bm{B} \in \mathcal{B}_0$. Using these samples, we estimate production functions on this cohort to forecast out-of-sample treatment effects. In contrast, in the analysis of this subsection, we match both on baseline variables and on variables affected by treatment compressing the construction of the synthetic cohort and the estimation of the production functions for out-of-sample forecasts to a single, non-parametric procedure.
+This is a fundamentally different matching procedure than what is used to construct the synthetic cohort in Step 1. In the main analysis of this paper, we match on baseline variables  not affected by treatment to construct a synthetic cohort with $\bm{B} \in \mathcal{B}_0$. Using these samples, we estimate production functions on this cohort to forecast out-of-sample treatment effects. In contrast, in the analysis of this subsection, we match both on baseline variables $\bm{B}$ and on variables affected by treatment $\bm{X}_{k,a}^d$ compressing the construction of the synthetic cohort and the estimation of the production functions for out-of-sample forecasts to a single, non-parametric procedure.
 
-Table~\ref{table:predsens} shows that there is close agreement between non-parametric estimates based on matching and the more parametric model-based approach previously presented. This reassuring concordance is consistent with exogeneity of inputs and structural invariance.
+Table~\ref{table:predsens} shows that there is close agreement between non-parametric estimates based on matching and the more parametric model-based approach previously presented. This reassuring concordance is consistent with exogeneity of inputs and structural invariance.\footnote{Note that the non-parametric estimates are more tightly estimated because there are fewer estimation steps. We are conservative in using the less precisely estimated forecast.}
 
 \section{Forecasting Other Life-cycle Benefits} \label{section:cbapractice}
 
@@ -463,9 +463,9 @@ Any childcare inducements of the program likely benefit parents who, at baseline
 
 \section{Estimates and Sensitivity Analysis} \label{section:cbaresults}
 
-\noindent Figure~\ref{figure:main} summarizes our findings. It displays the discounted (using a 3\% discount rate) life-cycle benefits and costs of the program (2014 USD) pooled across genders, over all outcome categories, and for separate categories as well.\footnote{Using discount rates of 0\%, 3\%, and 7\%, the estimates for the benefit/cost ratios are 17.40 (s.e.\ 5.90), 7.33 (s.e.\ 1.84), and 2.91 (s.e.\ 0.59), respectively. We report estimates for discount rates between 0\% and 15\% in  Appendix~\ref{appendix:varying-discount-rate}.} These benefits are the inputs of our baseline estimates for the annual internal rates of return and benefit/cost ratios. We conduct extensive sensitivity and robustness analyses to produce ranges of plausible values for the estimates of the internal rate of return (8.0,\ 18.3) and benefit/cost ratio (1.52,\ 17.40).
+\noindent Figure~\ref{figure:main} summarizes our findings. It displays the discounted (using a 3\% discount rate) life-cycle benefits and costs of the program (2014 USD) pooled across genders, over all outcome categories, and for separate categories as well.\footnote{Using discount rates of 0\%, 3\%, and 7\%, the estimates for the benefit/cost ratios are 17.40 (s.e.\ 5.90), 7.33 (s.e.\ 1.84), and 2.91 (s.e.\ 0.59), respectively. We report estimates for discount rates between 0\% and 15\% in  Appendix~\ref{appendix:varying-discount-rate}.} These benefits are the inputs of our baseline estimates for the annual internal rates of return and benefit/cost ratios. We conduct extensive sensitivity and robustness analyses to produce ranges of plausible values for the estimates of the internal rate of return (8.0,\ 18.3) and benefit/cost ratio (1.52,\ 17.40). We document that no single component of benefits drives our estimates.
 
-The costs of the program are substantial, as frequently been noted by critics.\footnote{See, e.g., \citet{Fox_News_2014_Head_Start_Effects} and \citet{Whitehurst_2014_Senate_Testimony}.} But so are the benefits, which far outweigh the costs. The individual gains in labor income, parental labor income, crime, and health are at least as large in magnitude as the costs. As a consequence, our measures of social efficiency remain statistically and economically significant even after eliminating the benefits from any one of the four main components that we monetize. No single component drives our results.
+The costs of the program are substantial, as frequently been noted by critics.\footnote{See, e.g., \citet{Fox_News_2014_Head_Start_Effects} and \citet{Whitehurst_2014_Senate_Testimony}.} But so are the benefits, which far outweigh the costs. The individual gains in labor income, parental labor income, crime, and health are at least as large in magnitude as the costs. As a consequence, our measures of social efficiency remain statistically and economically significant even after eliminating the benefits from any one of the four main components that we monetize. 
 
 \begin{sidewaysfigure}[!htbp]
 \caption{Net Present Value of Main Components of the Pooled (Over Gender) Cost/Benefit Analysis Over the Life Cycle per Program Participant, Treatment vs. Control}\label{figure:main}
@@ -514,13 +514,11 @@ Accounting for the treatment substitutes available to controls also matters. Mal
 
 Our baseline estimates account for the deadweight loss caused by distortionary taxes collected to fund programs, plus the direct costs associated with collecting taxes.\footnote{When the transaction between the government and an individual is a direct transfer, we consider 0.5 as the cost per each transacted dollar. We do not weight the final recipient of the transaction (e.g., transfer income). When the transaction is indirect, we classify it as government spending as a whole and consider its cost as 1.5 per dollar spent (e.g., public education).} We assume a marginal tax rate of $50\%$.\footnote{\citet{Feldstein_1999_REStat} estimates that the deadweight loss caused by increasing existing tax rates (marginal deadweight loss) may exceed two dollars per dollar of revenue generated. We use a more conservative value (0.5 dollars per dollar of revenue generated). In Tables~\ref{table:bcsens}, \ref{table:irrsens}, and in  Appendix~\ref{appendix:varying-dwl}, we explore the robustness of this choice of the welfare cost and find little sensitivity.} Our estimates are robust to dropping it to $0\%$ or doubling it to $100\%$ (deadweight loss columns). Our baseline estimate of benefit/cost ratios is based on a discount rate of $3\%$. Not discounting roughly doubles our benefit/cost ratios, while they remain statistically significant using a higher discount rate of $7\%$ (discount rate columns).
 
-Parental labor income effects induced by the childcare subsidy are an important component of the benefit/cost ratio. We take a conservative approach in our baseline estimates and do not account for potential shifts in parental labor income profiles due to education and work experience subsidized by childcare (see the discussion in Section~\ref{section:pincome}). Our baseline estimates rely solely on parental labor income when participant children are ages 0 to 21. Alternative approaches considering the gain for the parents through age 67 generate an additional increase in the gain due to parental labor income (see parental labor income columns).\footnote{If labor markets operate without frictions and the marginal rate of substitution between leisure and consumption equals the marginal wage rate, parental labor income should not be valued at the margin. The bottom box of Figure~\ref{figure:vennpooled} shows that the benefit/cost ratio and the internal rate of return remain sizable in magnitude and statistically significant if we omit parental income from the benefits attributed to the program.}
+Parental labor income effects induced by the childcare subsidy are an important component of the benefit/cost ratio.\footnote{There is no inconsistency between the weak female treatment effects on wage at age 30 and the high lifetime net present value treatment effect for earnings given life-cycle wage growth attributable to enhanced inputs (education, PIAT scores, etc.).} We take a conservative approach in our baseline estimates and do not account for potential shifts in parental labor income profiles due to education and work experience subsidized by childcare (see the discussion in Section~\ref{section:pincome}). Our baseline estimates rely solely on parental labor income when participant children are ages 0 to 21. Alternative approaches considering the gain for the parents through age 67 generate an additional increase in the gain due to parental labor income (see parental labor income columns).\footnote{If labor markets operate without frictions and the marginal rate of substitution between leisure and consumption equals the marginal wage rate, parental labor income should not be valued at the margin. The bottom box of Figure~\ref{figure:vennpooled} shows that the benefit/cost ratio and the internal rate of return remain sizable in magnitude and statistically significant if we omit parental income from the benefits attributed to the program.}
 
 Individuals in ABC/CARE could experience positive cohort effects that might (i) make them more productive and therefore experience wage growth; (ii) experience a negative shock such as an economic crisis and therefore experience a wage decline. Our estimates are robust when we vary annual growth and decay rates in labor income between $-0.5\%$ and $0.5\%$. This is consistent with the range of values in \citet{Lagakos_Moll_etal_2016_LifeCycle_NBER}.
 
 We also examine the sensitivity of our estimates to (i) dropping the most costly crimes such as murders and rapes;\footnote{Two individuals in the treatment group were convicted of rape and one individual in the control group was convicted of murder.} and (ii) halving the costs of victimization and judiciary costs related to crime. The first sensitivity check is important because we do not want our estimates to be based on a few exceptional crimes. The second is important because estimates of victimization costs are controversial because they are subjective (see  Appendix~\ref{appendix:crime-VI}). Our benefit/cost estimates are robust to these adjustments, even though crime is a major component of it. We also examine the sensitivity with respect to our main health component: quality-adjusted life years. This is an important component because healthier individuals survive longer, and treatment improves health conditions. Since this component is largely realized later in life and thus is heavily discounted, improvements in future medical care have a negligible effect on the estimated life-cycle benefits. Dropping this component or doubling the value of life does not have a major impact on our calculations.
-
-Figure~\ref{figure:vennpooled} summarizes the results from our extensive sensitivity analyses reported in Table~\ref{table:cba} of Appendix~\ref{appendix:sensitivity}, including the case where only one of the many streams we consider is the source of the benefit. We calculate the estimates with all possible combinations of the main benefit and cost streams. Our measures of economic efficiency remain statistically and economically significant even after eliminating the benefits from any one of the four main components that we monetize.  Overall, our sensitivity analyses indicate that no single category of outcomes drives the social efficiency of the program. Rather, it is the life-cycle benefits across multiple dimensions of human development.
 
 \begin{figure}[htpb!]
 \caption{Benefit/Cost Ratio and Internal Rate of Return when Accounting for Different Combinations of the Main Benefits}\label{figure:vennpooled}
@@ -529,6 +527,8 @@ Figure~\ref{figure:vennpooled} summarizes the results from our extensive sensiti
 \footnotesize \justify
 Note: This figure presents all possible combinations of accounting for the benefits from the four major categories in our analysis. The non-overlapping areas present estimates arising from a single category as the benefit. Where multiple categories overlap, we account for benefits from each of the overlapping categories. The other components remain constant across all calculations and are the same as in Figure~\ref{figure:main}. Health combines QALYs (quality-adjusted life years) and health expenditure. Inference is based on non-parametric, one-sided $p$-values from the empirical bootstrap distribution. We put boxes around point estimates that are statistically significant at the $10\%$ level.
 \end{figure}
+
+Figure~\ref{figure:vennpooled} summarizes the results from our extensive sensitivity analyses reported in Table~\ref{table:cba} of Appendix~\ref{appendix:sensitivity}, including the case where only one of the many streams we consider is the source of the benefit. We calculate the estimates with all possible combinations of the main benefit and cost streams. Our measures of economic efficiency remain statistically and economically significant even after eliminating the benefits from any one of the four main components that we monetize.  Overall, our sensitivity analyses indicate that no single category of outcomes drives the social efficiency of the program. Rather, it is the life-cycle benefits across multiple dimensions of human development.
 
 \section{Assessing Recent Benefit-Cost Analyses} \label{section:bcaestimates}
 
@@ -575,7 +575,7 @@ Our methodology provides a more accurate estimate of the benefits and costs of t
 
 \section{Summary} \label{section:conclusion}
 
-\noindent This paper presents a template for constructing economically interpretable summaries of the multiple treatment effects generated from a randomized evaluation of a high-quality, widely emulated early childhood program with follow-up through the mid 30s. We go beyond the usual practice of reporting batteries of treatment effects. We report the costs and monetize the treatments across numerous domains. We estimate the tax-adjusted internal rate of return and the benefit/cost ratio of the program. These aggregates assess the social efficiency of the program.
+\noindent This paper presents a template for constructing economically interpretable summaries of the multiple treatment effects generated from a randomized evaluation of a high-quality, widely emulated early childhood program with follow-up through the mid 30s. We go beyond the usual practice of reporting batteries of treatment effects. We report the costs and monetize the treatments across numerous domains. We estimate the tax-adjusted internal rate of return and the benefit/cost ratio of the program to assess the social efficiency of the program.
 
 We use auxiliary information and economic models to guide monetization of treatment effects and to extrapolate the measured benefits and costs to the full life cycles of participants. We account for model estimation and forecast error and conduct extensive sensitivity analyses of our estimates to alternative assumptions and methodologies. Under a variety of plausible assumptions, we estimate that the tax-adjusted internal rate of return of the program ranges from 8\% to 18.3\%. These estimates demonstrate the social profitability of ABC/CARE.
 
