all up to date in my repo and internal answers corrected

--- a/abc_comprehensivecba_answerstocomments.tex
+++ b/abc_comprehensivecba_answerstocomments.tex
@@ -55,7 +55,7 @@
 
 \item In footnote 29, isn't labor income lower for females in the treatment group? Table 2 panel (a) shows a negative coefficient on D.
 
-\noindent \textit{Answer.} Yes. You are correct. Labor income, at age 30, is higher in the control group although the difference is minor. We have corrected this. This has to do with females in the treatment group participating in the labor force later in their lives. After age 30, participation for treatment-group females picks up and ABC/CARE produces substantial gains in terms of their labor income.
+\noindent \textit{Answer.} Yes. You are correct. We have corrected footnote 29. But note that this is not a treatment effect. Treatment effects are reported in Table 1. Table 2 reports the coefficient on D in a regression of the output on the inputs and baseline variables.
 
 \item You say that the NPV of lifetime labor income is around $\$600,000$ on page 17 but this does not seem to lineup with Figure 3, maybe I'm missing something.
 
@@ -86,7 +86,7 @@ I think that the paper looks good in general. It provides a template for future 
 
 \item Page 8. Step 1 does not describe the synthetic cohort construction process clearly. I understand that the non-experimental sample is weighted by a similarity weight between non-experimental individuals and the experimental sample, however, the details of this weighting process is unclear. The Mahalanobis algorithm outlined in Appendix C.3.3 constructs a similarity score that is indexed by i and l(i). This implies that each experimental individual i is assigned a weight for each individual l in the non-experimental sample. So, there are i*l weights. It is unclear what happens next. How are the l*i weights used when estimating the production function over the non-experimental sample? Are the scores averaged over all i's for each l, thereby, yielding an average similarity score between each non-exp individual l and the entire experimental sample?
 
-\noindent \textit{Answer.} I believe that this issue cleared up in our conversation. We are following a standard procedure \citep{Heckman_Ichimura_etal_1998_REStud} to ``delimit'' the non-experimental samples as for them to be comparable in baseline characteristics $\bm{B}$ to the experimental sample. The objective is to estimate the production functions of interest in samples that are comparable to the ABC/CARE sample in baseline characteristics, as we discussed. 
+\noindent \textit{Answer.} We revised Step 1 based on your comment. We are following a standard procedure \citep{Heckman_Ichimura_etal_1998_REStud} to ``delimit'' the non-experimental samples as for them to be comparable in baseline characteristics $\bm{B}$ to the experimental sample. The objective is to estimate the production functions of interest in samples that are comparable to the ABC/CARE sample in baseline characteristics, as we discussed. 
 
 \item Page 9. In the explanation of Figure 1, do you mean that the synthetic cohort needs to be comparable to the experimental sample? 
 
@@ -168,7 +168,7 @@ Neil did not give an overall comment but did say that ``The Online Appendix serv
 
 \item Page 66 (Appendix): Remove ``[JLG: Note that in (1) the conditioning actually says A = 1. The printing faints and it looks a $\Lambda = 1$. It is not.]"
 
-\noindent \textit{Answer.} I have left that because, as you saw, in print it is really confusing. Once we finish the paper we will clear it.
+\noindent \textit{Answer.} We have fixed this. 
 
 \item Pages 85+ (Appendix): I believe you should be referencing Equation (8) instead of (14)?
 
